// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordSearchBoard should disregard selected words before game is started 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`WordSearchBoard should highlight path that is being selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -25,11 +25,11 @@
          width="300"
          x="0"
          y="0"
        >
          <div
-           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4 blur-sm"
+           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4"
            data-testid="testid-wordsearch-board"
            role="button"
            style="height: 300px; width: 300px;"
            tabindex="0"
          >
@@ -145,8 +145,16 @@
            >
              t
            </div>
          </div>
        </foreignobject>
+       <path
+         d="M -1 -1 L 1 -1 "
+         pointer-events="none"
+         stroke="#00000080"
+         stroke-linecap="round"
+         stroke-linejoin="round"
+         stroke-width="0"
+       />
      </svg>
    </div>
  </DocumentFragment>"
`;

exports[`WordSearchBoard should highlight selected word and path that is being selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -25,11 +25,11 @@
          width="300"
          x="0"
          y="0"
        >
          <div
-           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4 blur-sm"
+           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4"
            data-testid="testid-wordsearch-board"
            role="button"
            style="height: 300px; width: 300px;"
            tabindex="0"
          >
@@ -145,8 +145,24 @@
            >
              t
            </div>
          </div>
        </foreignobject>
+       <path
+         d="M -1 -1 L 1 -1 "
+         pointer-events="none"
+         stroke="#00000080"
+         stroke-linecap="round"
+         stroke-linejoin="round"
+         stroke-width="0"
+       />
+       <path
+         d="M -1 -1 L 1 -1 "
+         pointer-events="none"
+         stroke="#00000080"
+         stroke-linecap="round"
+         stroke-linejoin="round"
+         stroke-width="0"
+       />
      </svg>
    </div>
  </DocumentFragment>"
`;

exports[`WordSearchBoard should render when game is not started 1`] = `
<DocumentFragment>
  <div
    data-overlay-container="true"
  >
    <button
      data-testid="test-start"
      type="button"
    >
      Start
    </button>
    <button
      data-testid="test-stop"
      type="button"
    >
      Stop
    </button>
    <svg
      class="touch-none"
      style="width: 100%;"
      viewBox="0 0 300 300"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="300"
        width="300"
        x="0"
        y="0"
      >
        <div
          class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4 blur-sm"
          data-testid="testid-wordsearch-board"
          role="button"
          style="height: 300px; width: 300px;"
          tabindex="0"
        >
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="0-0"
            data-testid="testid-0-0"
          >
            b
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="0-1"
            data-testid="testid-0-1"
          >
            d
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="0-2"
            data-testid="testid-0-2"
          >
            i
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="0-3"
            data-testid="testid-0-3"
          >
            g
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="1-0"
            data-testid="testid-1-0"
          >
            d
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="1-1"
            data-testid="testid-1-1"
          >
            o
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="1-2"
            data-testid="testid-1-2"
          >
            g
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="1-3"
            data-testid="testid-1-3"
          >
            o
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="2-0"
            data-testid="testid-2-0"
          >
            u
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="2-1"
            data-testid="testid-2-1"
          >
            c
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="2-2"
            data-testid="testid-2-2"
          >
            a
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="2-3"
            data-testid="testid-2-3"
          >
            t
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="3-0"
            data-testid="testid-3-0"
          >
            x
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="3-1"
            data-testid="testid-3-1"
          >
            y
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="3-2"
            data-testid="testid-3-2"
          >
            z
          </div>
          <div
            class="uppercase cursor-pointer bg-foreground flex items-center justify-center"
            data-key="3-3"
            data-testid="testid-3-3"
          >
            t
          </div>
        </div>
      </foreignobject>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`WordSearchBoard should unblur board once game is started 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -25,11 +25,11 @@
          width="300"
          x="0"
          y="0"
        >
          <div
-           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4 blur-sm"
+           class="bg-divider border-divider p-1 gap-1 grid box-border grid-cols-4 grid-rows-4"
            data-testid="testid-wordsearch-board"
            role="button"
            style="height: 300px; width: 300px;"
            tabindex="0"
          >"
`;
